--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                                        <i class="fa fa-terminal"></i>
                                     </div>
                                     <div class="timeline-label">
-                                       <h2>MSc Computer and Information Engineering</a><span><span>2021 - 2023</span></h2>
+                                       <h2>MSc Computer and Information Engineering</a> <span><span>2021 - 2023</span></h2>
                                        ICT for Internet and Multimedia</span><br>
                                        <p><strong>University of Padova</strong><br>
                                           🎯 Specialized in Data Science and Deep Learning <br>
@@ -256,7 +256,7 @@
                                        <h2>BSc Physics</a> <span>2018 - 2021</span></h2>
                                        <p><strong>University of Milan</strong><br>
                                           🎯 Specialized in Computational Physics<br>
-                                          ⚛️ Classical and Quantum Physics: Quantum Theory of Matter, Subnuclear Physics...<br>
+                                          ⚛️ Quantum Physics: Quantum Theory of Matter, Subnuclear Physics...<br>
                                           📈 Advanced Calculus and Statistics for Modelling and Data Analysis.<br>
                                           🖥️ Quantum Computing and Quantum Information.<br>
                                        <p></p>
@@ -288,12 +288,19 @@
                         <div class="col-md-12">
                            <align="float">
                               <script src="https://tarptaeya.github.io/repo-card/repo-card.js"></script>
-                              <div class="repo-card" data-repo="nicolezattarin/LOB-feature-analysis" data-width="360"></div> &nbsp; <div class="repo-card" data-repo="nicolezattarin/BERT-Aspect-Based-Sentiment-Analysis" data-width="360"></div> <br>
+                              <!-- force div to be 50% width -->
+                              <style>
+                                 .repo-card {
+                                 width: 50%;
+                                 }
+                              </style>
+                              <div class="repo-card" data-repo="nicolezattarin/LOB-feature-analysis" data-width="360"></div> &nbsp;
+                              <div class="repo-card" data-repo="nicolezattarin/BERT-Aspect-Based-Sentiment-Analysis" data-width="360"></div> <br>
                               <div class="repo-card" data-repo="nicolezattarin/PointCloudCompression" data-width="360"></div> &nbsp;
-                              <div class="repo-card" data-repo="nicolezattarin/3D-Object-Classification" data-width="360"></div>
+                              <div class="repo-card" data-repo="nicolezattarin/3D-Object-Classification"</div> &nbsp;
                               <div class="repo-card" data-repo="nicolezattarin/IoMT-efficient-information-distribution" data-width="360"></div> &nbsp;
                               <div class="repo-card" data-repo="nicolezattarin/OpenCV-parking-lot-detection" data-width="360"></div>
-                           </align>
+                          </align>
                      </div>
                   </div>
                </section>
