--- a/index.html
+++ b/index.html
@@ -292,11 +292,10 @@
                               <style>
                                  .repo-card {
                                  width: 50%;
-                                 display: inline;
                                  }
                               </style>
-                              <div class="repo-card" data-repo="nicolezattarin/LOB-feature-analysis" data-width="360"></div> <div class="repo-card" data-repo="nicolezattarin/BERT-Aspect-Based-Sentiment-Analysis" data-width="360"></div> <br>
-                              <div class="repo-card" data-repo="nicolezattarin/PointCloudCompression" data-width="360"></div> <div class="repo-card" data-repo="nicolezattarin/3D-Object-Classification"</div> <br>
+                              <div class="repo-card" data-repo="nicolezattarin/LOB-feature-analysis"></div> <div class="repo-card" data-repo="nicolezattarin/BERT-Aspect-Based-Sentiment-Analysis" data-width="360"></div> <br>
+                              <div class="repo-card" data-repo="nicolezattarin/PointCloudCompression"></div> <div class="repo-card" data-repo="nicolezattarin/3D-Object-Classification"</div> <br>
                               <div class="repo-card" data-repo="nicolezattarin/IoMT-efficient-information-distribution"></div> <div class="repo-card" data-repo="nicolezattarin/OpenCV-parking-lot-detection"></div> <br>
                           </align>
                      </div>
