--- a/index.html
+++ b/index.html
@@ -286,18 +286,18 @@
                      </div>
                      <div class="row">
                         <div class="col-md-12">
-                           <align="float">
                               <script src="https://tarptaeya.github.io/repo-card/repo-card.js"></script>
                               <!-- force div to be 50% width -->
                               <style>
                                  .repo-card {
                                  width: 50%;
+                                 /* align infline */
+                                 display: inline-block;
                                  }
                               </style>
                               <div class="repo-card" data-repo="nicolezattarin/LOB-feature-analysis" data-width="360"></div> <div class="repo-card" data-repo="nicolezattarin/BERT-Aspect-Based-Sentiment-Analysis" data-width="360"></div> <br>
-                              <div class="repo-card" data-repo="nicolezattarin/PointCloudCompression" data-width="360"></div> <div class="repo-card" data-repo="nicolezattarin/3D-Object-Classification"</div> <br>
+                              <div class="repo-card" data-repo="nicolezattarin/PointCloudCompression" data-width="360"></div> <div class="repo-card" data-repo="nicolezattarin/3D-Object-Classification" data-width="360"></div> <br>
                               <div class="repo-card" data-repo="nicolezattarin/IoMT-efficient-information-distribution" data-width="360"></div> <div class="repo-card" data-repo="nicolezattarin/OpenCV-parking-lot-detection" data-width="360"></div>
-                          </align>
                      </div>
                   </div>
                </section>
