--- a/index.html
+++ b/index.html
@@ -290,9 +290,9 @@
                               <!-- force div to be 50% width -->
                               <style>
                                  .repo-card {
-                                 width: 50%;
+                                 width: 45%;
                                  /* align infline */
-                                 display: inline-block;
+                                 display: inline;
                                  }
                               </style>
                               <div class="repo-card" data-repo="nicolezattarin/LOB-feature-analysis" data-width="360"></div> <div class="repo-card" data-repo="nicolezattarin/BERT-Aspect-Based-Sentiment-Analysis" data-width="360"></div> <br>
