--- a/index.html
+++ b/index.html
@@ -290,12 +290,12 @@
                               <!-- force div to be 50% width -->
                               <style>
                                  .repo-card {
-                                 width: 50%;
+                                 width: 360px;
                                  }
                               </style>
-                              <div class="repo-card" data-repo="nicolezattarin/LOB-feature-analysis" data-width="360"></div> <div class="repo-card" data-repo="nicolezattarin/BERT-Aspect-Based-Sentiment-Analysis" data-width="360"></div> <br>
-                              <div class="repo-card" data-repo="nicolezattarin/PointCloudCompression" data-width="360"></div> <div class="repo-card" data-repo="nicolezattarin/3D-Object-Classification" data-width="360"></div> <br>
-                              <div class="repo-card" data-repo="nicolezattarin/IoMT-efficient-information-distribution" data-width="360"></div> <div class="repo-card" data-repo="nicolezattarin/OpenCV-parking-lot-detection" data-width="360"></div>
+                              <div class="repo-card" data-repo="nicolezattarin/LOB-feature-analysis" ></div> <div class="repo-card" data-repo="nicolezattarin/BERT-Aspect-Based-Sentiment-Analysis" ></div> <br>
+                              <div class="repo-card" data-repo="nicolezattarin/PointCloudCompression" ></div> <div class="repo-card" data-repo="nicolezattarin/3D-Object-Classification" ></div> <br>
+                              <div class="repo-card" data-repo="nicolezattarin/IoMT-efficient-information-distribution" ></div> <div class="repo-card" data-repo="nicolezattarin/OpenCV-parking-lot-detection" ></div>
                      </div>
                   </div>
                </section>
