--- a/index.html
+++ b/index.html
@@ -293,9 +293,14 @@
                                  width: 360px;
                                  }
                               </style>
-                              <div class="repo-card" data-repo="nicolezattarin/LOB-feature-analysis" ></div> <div class="repo-card" data-repo="nicolezattarin/BERT-Aspect-Based-Sentiment-Analysis" ></div> <br>
-                              <div class="repo-card" data-repo="nicolezattarin/PointCloudCompression" ></div> <div class="repo-card" data-repo="nicolezattarin/3D-Object-Classification" ></div> <br>
-                              <div class="repo-card" data-repo="nicolezattarin/IoMT-efficient-information-distribution" ></div> <div class="repo-card" data-repo="nicolezattarin/OpenCV-parking-lot-detection" ></div>
+                              <div class="container">
+                                 .container > * {
+                                    display: inline-block;
+                                 }
+                                 <div class="repo-card" data-repo="nicolezattarin/LOB-feature-analysis" ></div> <div class="repo-card" data-repo="nicolezattarin/BERT-Aspect-Based-Sentiment-Analysis" ></div> <br>
+                                 <div class="repo-card" data-repo="nicolezattarin/PointCloudCompression" ></div> <div class="repo-card" data-repo="nicolezattarin/3D-Object-Classification" ></div> <br>
+                                 <div class="repo-card" data-repo="nicolezattarin/IoMT-efficient-information-distribution" ></div> <div class="repo-card" data-repo="nicolezattarin/OpenCV-parking-lot-detection" ></div>
+                              </div>
                      </div>
                   </div>
                </section>
