--- a/index.html
+++ b/index.html
@@ -291,12 +291,11 @@
                               <style>
                                  .repo-card {
                                  width: 360px;
+                                 float:left;
                                  }
                               </style>
+                              
                               <div class="container">
-                                 .container > * {
-                                    display: inline-block;
-                                 }
                                  <div class="repo-card" data-repo="nicolezattarin/LOB-feature-analysis" ></div> <div class="repo-card" data-repo="nicolezattarin/BERT-Aspect-Based-Sentiment-Analysis" ></div> <br>
                                  <div class="repo-card" data-repo="nicolezattarin/PointCloudCompression" ></div> <div class="repo-card" data-repo="nicolezattarin/3D-Object-Classification" ></div> <br>
                                  <div class="repo-card" data-repo="nicolezattarin/IoMT-efficient-information-distribution" ></div> <div class="repo-card" data-repo="nicolezattarin/OpenCV-parking-lot-detection" ></div>
