--- a/index.html
+++ b/index.html
@@ -295,9 +295,9 @@
                                  }
                               </style>
                               
-                              <div class="repo-card" data-repo="nicolezattarin/LOB-feature-analysis" ></div> <div class="repo-card" data-repo="nicolezattarin/BERT-Aspect-Based-Sentiment-Analysis" ></div> <br>
-                              <div class="repo-card" data-repo="nicolezattarin/PointCloudCompression" ></div> <div class="repo-card" data-repo="nicolezattarin/3D-Object-Classification" ></div> <br>
-                              <div class="repo-card" data-repo="nicolezattarin/IoMT-efficient-information-distribution" ></div> <div class="repo-card" data-repo="nicolezattarin/OpenCV-parking-lot-detection" ></div>
+                              <div class="repo-card" data-repo="nicolezattarin/LOB-feature-analysis" ></div>&nbsp;&nbsp<div class="repo-card" data-repo="nicolezattarin/BERT-Aspect-Based-Sentiment-Analysis" ></div> <br> <br>
+                              <div class="repo-card" data-repo="nicolezattarin/PointCloudCompression" ></div>&nbsp;&nbsp<div class="repo-card" data-repo="nicolezattarin/3D-Object-Classification" ></div> <br> <br>
+                              <div class="repo-card" data-repo="nicolezattarin/IoMT-efficient-information-distribution" ></div>&nbsp;&nbsp<div class="repo-card" data-repo="nicolezattarin/OpenCV-parking-lot-detection" ></div>
                      
                      </div>
                   </div>
