--- a/index.html
+++ b/index.html
@@ -294,11 +294,15 @@
                                  float:left;
                                  }
                               </style>
-                              
-                              <div class="repo-card" data-repo="nicolezattarin/LOB-feature-analysis" ></div>&nbsp;&nbsp<div class="repo-card" data-repo="nicolezattarin/BERT-Aspect-Based-Sentiment-Analysis" ></div> <br> <br>
-                              <div class="repo-card" data-repo="nicolezattarin/PointCloudCompression" ></div>&nbsp;&nbsp<div class="repo-card" data-repo="nicolezattarin/3D-Object-Classification" ></div> <br> <br>
-                              <div class="repo-card" data-repo="nicolezattarin/IoMT-efficient-information-distribution" ></div>&nbsp;&nbsp<div class="repo-card" data-repo="nicolezattarin/OpenCV-parking-lot-detection" ></div>
-                     
+                              <div class="container">
+                                 <div class="repo-card" data-repo="nicolezattarin/LOB-feature-analysis" ></div>&nbsp;&nbsp<div class="repo-card" data-repo="nicolezattarin/BERT-Aspect-Based-Sentiment-Analysis" ></div>
+                              </div>
+                              <div class="container">
+                                 <div class="repo-card" data-repo="nicolezattarin/PointCloudCompression" ></div>&nbsp;&nbsp<div class="repo-card" data-repo="nicolezattarin/3D-Object-Classification" ></div> 
+                              </div> 
+                              <div class="container">
+                                 <div class="repo-card" data-repo="nicolezattarin/IoMT-efficient-information-distribution" ></div>&nbsp;&nbsp<div class="repo-card" data-repo="nicolezattarin/OpenCV-parking-lot-detection" ></div>
+                              </div>
                      </div>
                   </div>
                </section>
@@ -330,7 +334,8 @@
                                     <link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
                                     <p style="font-size: 30px; margin-bottom: 0px;"><a href="https://twitter.com/zattacole" style="color: black;" class="fa fa-twitter"></a> &nbsp;&nbsp;&nbsp;&nbsp;
                                        <a href="https://www.linkedin.com/in/nicole-zattarin-a87768105/" style="color: black;" class="fa fa-linkedin"></a> &nbsp;&nbsp;&nbsp;&nbsp;
-                                       <a href="https://github.com/nicolezattarin" style="color: black;" class="fa fa-github"></a>
+                                       <a href="https://github.com/nicolezattarin" style="color: black;" class="fa fa-github"></a> &nbsp;&nbsp;&nbsp;&nbsp;
+                                       <a href="mailto:nicole.zattarin@gmail.com" style="color: black;" class="fa fa-envelope"></a>
                                     </p>
                                  </div>
                               </div>
