--- a/index.html
+++ b/index.html
@@ -295,13 +295,13 @@
                                  }
                               </style>
                               <div class="container">
-                                 <div class="repo-card" data-repo="nicolezattarin/LOB-feature-analysis" ></div>&nbsp;&nbsp<div class="repo-card" data-repo="nicolezattarin/BERT-Aspect-Based-Sentiment-Analysis" ></div>
-                              </div>
+                                 <div class="repo-card" data-repo="nicolezattarin/LOB-feature-analysis" ></div> &nbsp; &nbsp; &nbsp; <div class="repo-card" data-repo="nicolezattarin/BERT-Aspect-Based-Sentiment-Analysis" ></div>
+                              </div>  <br> 
                               <div class="container">
-                                 <div class="repo-card" data-repo="nicolezattarin/PointCloudCompression" ></div>&nbsp;&nbsp<div class="repo-card" data-repo="nicolezattarin/3D-Object-Classification" ></div> 
-                              </div> 
+                                 <div class="repo-card" data-repo="nicolezattarin/PointCloudCompression" ></div> &nbsp; &nbsp; &nbsp; <div class="repo-card" data-repo="nicolezattarin/3D-Object-Classification" ></div> 
+                              </div> <br>
                               <div class="container">
-                                 <div class="repo-card" data-repo="nicolezattarin/IoMT-efficient-information-distribution" ></div>&nbsp;&nbsp<div class="repo-card" data-repo="nicolezattarin/OpenCV-parking-lot-detection" ></div>
+                                 <div class="repo-card" data-repo="nicolezattarin/IoMT-efficient-information-distribution" ></div> &nbsp; &nbsp; &nbsp; <div class="repo-card" data-repo="nicolezattarin/OpenCV-parking-lot-detection" ></div>
                               </div>
                      </div>
                   </div>
