--- a/index.html
+++ b/index.html
@@ -101,8 +101,9 @@
                                  <div class="about-desc">
                                     <h2>About Me</h2>
                                     <hr>
-                                    <p> I am a passionate and self-motivated Physics and Information Engineering graduate with experience in Data Science for financial applications.
-                                    <br>My education is focused on Data Analysis and Artificial Intelligence applications on real world data.<br>Currently looking forward to apply my analytical skills in different fields, by means of the state-of-art computational tools and technologies.</p>
+                                    <p> I am a passionate and committed BSc Physicist and MSc student in Information Engineering with a strong interest in Data Science and Machine Learning.
+                                    <br>Currently working as a Quant Developer @ XSOR Capital, a London based investment boutique, where I am responsible for the development of the Machine Learning models for trading and the implementation of automatic trading strategies.
+                                    <br>My education is mainly focused on the application of analytical and computational methods to the study of complex systems and real world problems, by means of state-of-the-art technologies.
                                  </div>
                               </div>
                            </div>
@@ -164,7 +165,7 @@
                                     <div class="timeline-label">
                                        <h2>XSOR Capital</a> <span>July 2022 - Now</span></h2>
                                        <p><strong>Quant Dev</strong><br>
-                                          I am contributing in the developing of Machine Learning strategies for Algorithmic trading.<br>
+                                          Contributing in the developing of Machine Learning strategies for Algorithmic trading.<br>
                                           💻 Developing a Python framework for backtesting and live trading.<br>
                                           👨🏽‍💻 Implementing Machine Learning algorithms for financial time series prediction.<br>
                                           📈 Data providers and trading platforms integration.<br>
@@ -180,7 +181,7 @@
                                     <div class="timeline-label">
                                        <h2><a href="https://smartkyc.com">Smart KYC</a> <span>March 2023 - May 2023</span></h2>
                                        <p><strong>NLP engineer intern</strong><br>
-                                          Developed a Natural Language Processing pipeline for personal name origin classification.<br>
+                                          Developed a Natural Language Processing pipeline for Know Your Customer (KYC) solutions.<br>
                                           🔧 Developed a Python framework for data preprocessing and feature extraction.<br>
                                           👨🏽‍💻 Implemented a LSTM-based model for NLP classification.<br>
                                        <p></p>
@@ -208,12 +209,34 @@
                            <hr>
                         </div>
                      </div>
-                     <p>I am not just pursuing a career in Robotics and Embedded Software Engineering, I am geniuenly passionated by new technologies, open-source and continuously learning new things.</p>
+                     <p> Always looking forward to learn new technologies and improve my skills, here are my favorites:</p>
                      <br>
                      <!-- insert badges -->
                      <p align="left">
+                        <!-- dev skills -->
+                        <p> Dev skills: </p>
                         <a href="https://skillicons.dev">
-                          <img src="https://skillicons.dev/icons?i=git,github,gitlab,azure,cpp,py,pytorch,latex,postgres" />
+                          <img src="https://skillicons.dev/icons?i=git,github,gitlab,azure,vscode" />
+                        </a>
+                        <!-- cloud -->
+                        <p> Cloud: </p>
+                        <a href="https://skillicons.dev">
+                          <img src="https://skillicons.dev/icons?i=azure" />
+                        </a>
+                        <!-- programming languages -->
+                        <p> Programming languages: </p>
+                        <a href="https://skillicons.dev">
+                          <img src="https://skillicons.dev/icons?i=py,cplusplus" />
+                        </a>
+                        <!-- ML frameworks -->
+                        <p> Libraries and ML frameworks: </p>
+                        <a href="https://skillicons.dev">
+                          <img src="https://skillicons.dev/icons?i=pytorch,tensorflow,keras,flask" />
+                        </a>
+                        <!-- databases -->
+                        <p> Databases: </p>
+                        <a href="https://skillicons.dev">
+                          <img src="https://skillicons.dev/icons?i=postgres" />
                         </a>
                       </p>
                   </div>
@@ -295,13 +318,13 @@
                                  }
                               </style>
                               <div class="container">
-                                 <div class="repo-card" data-repo="nicolezattarin/LOB-feature-analysis" ></div> &nbsp; &nbsp; &nbsp; <div class="repo-card" data-repo="nicolezattarin/BERT-Aspect-Based-Sentiment-Analysis" ></div>
+                                 <div class="repo-card" data-repo="nicolezattarin/LOB-feature-analysis" ></div> &ensp; <div class="repo-card" data-repo="nicolezattarin/BERT-Aspect-Based-Sentiment-Analysis" ></div>
                               </div>  <br> 
                               <div class="container">
-                                 <div class="repo-card" data-repo="nicolezattarin/PointCloudCompression" ></div> &nbsp; &nbsp; &nbsp; <div class="repo-card" data-repo="nicolezattarin/3D-Object-Classification" ></div> 
+                                 <div class="repo-card" data-repo="nicolezattarin/PointCloudCompression" ></div> &ensp; <div class="repo-card" data-repo="nicolezattarin/3D-Object-Classification" ></div> 
                               </div> <br>
                               <div class="container">
-                                 <div class="repo-card" data-repo="nicolezattarin/IoMT-efficient-information-distribution" ></div> &nbsp; &nbsp; &nbsp; <div class="repo-card" data-repo="nicolezattarin/OpenCV-parking-lot-detection" ></div>
+                                 <div class="repo-card" data-repo="nicolezattarin/IoMT-efficient-information-distribution" ></div> &ensp; <div class="repo-card" data-repo="nicolezattarin/OpenCV-parking-lot-detection" ></div>
                               </div>
                      </div>
                   </div>
