--- a/index.html
+++ b/index.html
@@ -213,31 +213,33 @@
                      <br>
                      <!-- insert badges -->
                      <p align="left">
-                        <!-- dev skills -->
-                        <p> Dev skills: </p>
-                        <a href="https://skillicons.dev">
-                          <img src="https://skillicons.dev/icons?i=git,github,gitlab,azure,vscode" />
-                        </a>
-                        <!-- cloud -->
-                        <p> Cloud: </p>
-                        <a href="https://skillicons.dev">
-                          <img src="https://skillicons.dev/icons?i=azure" />
-                        </a>
+                        <!-- dev skills box -->
+                        <div class="skill-box">
+                           <a href="https://skillicons.dev">
+                             <img src="https://skillicons.dev/icons?i=git,github,gitlab,,vscode" />
+                           </a>
+                        </div>
+
                         <!-- programming languages -->
-                        <p> Programming languages: </p>
+                        <p> Programming languages and Databases: </p>
                         <a href="https://skillicons.dev">
-                          <img src="https://skillicons.dev/icons?i=py,cplusplus" />
+                          <img src="https://skillicons.dev/icons?i=py,cpp,postgres" />
                         </a>
                         <!-- ML frameworks -->
-                        <p> Libraries and ML frameworks: </p>
-                        <a href="https://skillicons.dev">
-                          <img src="https://skillicons.dev/icons?i=pytorch,tensorflow,keras,flask" />
-                        </a>
-                        <!-- databases -->
-                        <p> Databases: </p>
-                        <a href="https://skillicons.dev">
-                          <img src="https://skillicons.dev/icons?i=postgres" />
-                        </a>
+                        <div class="skill-box">
+                           <!-- insert images  -->
+                           <img src="images/logos/np.png" alt="intro" class="img-responsive" height="50">
+                           <img src="images/logos/tf.png" alt="intro" class="img-responsive" height="50">
+                           <img src="images/logos/keras.png" alt="intro" class="img-responsive" height="50">
+                           <img src="images/logos/pytorch.png" alt="intro" class="img-responsive" height="50">
+                           <img src="images/logos/scikit.png" alt="intro" class="img-responsive" height="50">
+                           <img src="images/logos/pandas.png" alt="intro" class="img-responsive" height="50">
+                           <img src="images/logos/spacy.png" alt="intro" class="img-responsive" height="50">
+                           <img src="images/logos/opencv.png" alt="intro" class="img-responsive" height="50">
+                           <img src="images/logos/plotly.png" alt="intro" class="img-responsive" height="50">
+                           <img src="images/logos/optuna.png" alt="intro" class="img-responsive" height="50">
+                        </div>
+
                       </p>
                   </div>
                </section>
@@ -313,7 +315,7 @@
                               <!-- force div to be 50% width -->
                               <style>
                                  .repo-card {
-                                 width: 360px;
+                                 width: 350px;
                                  float:left;
                                  }
                               </style>
