--- a/index.html
+++ b/index.html
@@ -228,16 +228,16 @@
                         <!-- ML frameworks -->
                         <div class="skill-box">
                            <!-- insert images  -->
-                           <img src="images/logos/np.png" alt="intro" class="img-responsive" height="50">
-                           <img src="images/logos/tf.png" alt="intro" class="img-responsive" height="50">
-                           <img src="images/logos/keras.png" alt="intro" class="img-responsive" height="50">
-                           <img src="images/logos/pytorch.png" alt="intro" class="img-responsive" height="50">
-                           <img src="images/logos/scikit.png" alt="intro" class="img-responsive" height="50">
-                           <img src="images/logos/pandas.png" alt="intro" class="img-responsive" height="50">
-                           <img src="images/logos/spacy.png" alt="intro" class="img-responsive" height="50">
-                           <img src="images/logos/opencv.png" alt="intro" class="img-responsive" height="50">
-                           <img src="images/logos/plotly.png" alt="intro" class="img-responsive" height="50">
-                           <img src="images/logos/optuna.png" alt="intro" class="img-responsive" height="50">
+                           <img src="images/logos/np.png" alt="intro"  height="50">
+                           <img src="images/logos/tf.png" alt="intro"  height="50">
+                           <img src="images/logos/keras.png" alt="intro"  height="50">
+                           <img src="images/logos/pytorch.png" alt="intro"  height="50">
+                           <img src="images/logos/scikit.png" alt="intro"  height="50">
+                           <img src="images/logos/pandas.png" alt="intro"  height="50">
+                           <img src="images/logos/spacy.png" alt="intro"  height="50">
+                           <img src="images/logos/opencv.png" alt="intro"  height="50">
+                           <img src="images/logos/plotly.png" alt="intro"  height="50">
+                           <img src="images/logos/optuna.png" alt="intro"  height="50">
                         </div>
 
                       </p>
