--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <li><a href="#" data-nav-section="experience">Work Experience</a></li>
                         <li><a href="#" data-nav-section="education">Education</a></li>
                         <li><a href="#" data-nav-section="skills">Skills</a></li>
-                        <li><a href="#" data-nav-section="selected projects">Selected Projects</a></li>
+                        <li><a href="#" data-nav-section="personal projects">Personal Projects</a></li>
                         <li><a href="#" data-nav-section="contact">Contact</a></li>
                      </ul>
                   </div>
@@ -77,20 +77,7 @@
             <style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
             <!----- main page--------->
             <div id="colorlib-main">
-               <!-------------------Intro--------------->
-               <!-- <section class="colorlib-about" data-section="about">
-                  <div class="colorlib-narrow-content">
-                     <div class="row">
-                        <div class="col-md-12">
-                           <div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
-                              <div class="col-md-12" style="margin-bottom: -30px">
-                                 <img src="images/bg.png" alt="intro" class="img-responsive">
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-               </section> -->
+
                <!---------------About me---------------------->
                <section class="colorlib-about" data-section="about">
                   <div class="colorlib-narrow-content">
@@ -228,16 +215,16 @@
                         <!-- ML frameworks -->
                         <div class="skill-box">
                            <!-- insert images  -->
-                           <img src="images/logos/np.png" alt="intro"  height="50">
-                           <img src="images/logos/tf.png" alt="intro"  height="50">
-                           <img src="images/logos/keras.png" alt="intro"  height="50">
-                           <img src="images/logos/pytorch.png" alt="intro"  height="50">
-                           <img src="images/logos/scikit.png" alt="intro"  height="50">
-                           <img src="images/logos/pandas.png" alt="intro"  height="50">
-                           <img src="images/logos/spacy.png" alt="intro"  height="50">
-                           <img src="images/logos/opencv.png" alt="intro"  height="50">
-                           <img src="images/logos/plotly.png" alt="intro"  height="50">
-                           <img src="images/logos/optuna.png" alt="intro"  height="50">
+                           <img src="images/logos/np.png" height="50">
+                           <img src="images/logos/tf.png" height="50">
+                           <img src="images/logos/keras.png"  height="50">
+                           <img src="images/logos/pytorch.png"  height="50">
+                           <img src="images/logos/scikit.png"  height="50">
+                           <img src="images/logos/pandas.png"  height="50">
+                           <img src="images/logos/spacy.png"  height="50">
+                           <img src="images/logos/opencv.png"  height="50">
+                           <img src="images/logos/plotly.png"  height="50">
+                           <img src="images/logos/optuna.png"  height="50">
                         </div>
 
                       </p>
@@ -301,11 +288,11 @@
                </section>
                <!--------Projects---------->
 
-               <section class="colorlib-experience" data-section="selected projects">
+               <section class="colorlib-experience" data-section="personal projects">
                   <div class="colorlib-narrow-content">
                      <div class="row">
                         <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-                           <h2>Selected Projects</h2>
+                           <h2>Personal Projects</h2>
                            <hr>
                         </div>
                      </div>
