--- a/index.html
+++ b/index.html
@@ -198,37 +198,11 @@
                      </div>
                      <p> Always looking forward to learn new technologies and improve my skills, here are my favorites:</p>
                      <br>
-                     <!-- insert badges -->
-                     <p align="left">
-                        <!-- dev skills box -->
                         <div class="skill-box">
                            <a href="https://skillicons.dev">
-                             <img src="https://skillicons.dev/icons?i=git,github,gitlab,,vscode" />
+                             <img src="https://skillicons.dev/icons?i=git,github,gitlab,vscode,py,cpp,postgres,latex,torch" />
                            </a>
                         </div>
-
-                        <!-- programming languages -->
-                        <p> Programming languages and Databases: </p>
-                        <a href="https://skillicons.dev">
-                          <img src="https://skillicons.dev/icons?i=py,cpp,postgres" />
-                        </a>
-                        <!-- ML frameworks -->
-                        <div class="skill-box">
-                           <!-- insert images  -->
-                           <img src="images/logos/np.png" height="50">
-                           <img src="images/logos/tf.png" height="50">
-                           <img src="images/logos/keras.png"  height="50">
-                           <img src="images/logos/pytorch.png"  height="50">
-                           <img src="images/logos/scikit.png"  height="50">
-                           <img src="images/logos/pandas.png"  height="50">
-                           <img src="images/logos/spacy.png"  height="50">
-                           <img src="images/logos/opencv.png"  height="50">
-                           <img src="images/logos/plotly.png"  height="50">
-                           <img src="images/logos/optuna.png"  height="50">
-                        </div>
-
-                      </p>
-                  </div>
                </section>
                <!--------------Education----------->
                <section class="colorlib-experience" data-section="education">
