--- a/index.html
+++ b/index.html
@@ -197,10 +197,9 @@
                         </div>
                      </div>
                      <p> Always looking forward to learn new technologies and improve my skills, here are my favorites:</p>
-                     <br>
                         <div class="skill-box">
                            <a href="https://skillicons.dev">
-                             <img src="https://skillicons.dev/icons?i=git,github,gitlab,vscode,py,cpp,postgres,latex,torch" />
+                             <img src="https://skillicons.dev/icons?i=git,github,gitlab,vscode,py,cpp,postgres,latex,pytorch" />
                            </a>
                         </div>
                </section>
@@ -270,8 +269,10 @@
                            <hr>
                         </div>
                      </div>
+                     section class="colorlib-experience" data-section="personal projects">
+                  <div class="colorlib-narrow-content">
                      <div class="row">
-                        <div class="col-md-12">
+                        <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
                               <script src="https://tarptaeya.github.io/repo-card/repo-card.js"></script>
                               <!-- force div to be 50% width -->
                               <style>
@@ -289,26 +290,11 @@
                               <div class="container">
                                  <div class="repo-card" data-repo="nicolezattarin/IoMT-efficient-information-distribution" ></div> &ensp; <div class="repo-card" data-repo="nicolezattarin/OpenCV-parking-lot-detection" ></div>
                               </div>
-                     </div>
-                  </div>
-               </section>
-
-
-
-               <!--------Contact---------->
-               <section class="colorlib-contact" data-section="contact">
-                  <div class="colorlib-narrow-content">
-                     <div class="row">
-                        <div class="col-md-12">
-                           <div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
-                              <h2>Contact</h2>
-                              <hr>
-                              <p>If by any chance you'd like me to help you in any way, whether it's contributing, consulting or advising, don't hesitate to contact me at <strong><a href = "mailto: erwin.lejeune15@gmail.com">erwin.lejeune15@gmail.com</a></strong></p>
                            </div>
                         </div>
                      </div>
-                  </div>
                </section>
+
                <!------------Footer------------->
                <section class="colorlib-footer" data-section="footer">
                   <div class="colorlib-narrow-content">
