--- a/index.html
+++ b/index.html
@@ -196,12 +196,20 @@
                            <hr>
                         </div>
                      </div>
-                     <p> Always looking forward to learn new technologies and improve my skills, here are my favorites:</p>
-                        <div class="skill-box">
-                           <a href="https://skillicons.dev">
-                             <img src="https://skillicons.dev/icons?i=git,github,gitlab,vscode,py,cpp,postgres,latex,pytorch" />
-                           </a>
+                        <div class="colorlib-narrow-content">
+                           <div class="row">
+                              <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
+
+                                 <p> Always looking forward to learn new technologies and improve my skills, here are my favorites:</p>
+                                    <div class="skill-box">
+                                       <a href="https://skillicons.dev">
+                                       <img src="https://skillicons.dev/icons?i=git,github,gitlab,vscode,py,cpp,postgres,latex,pytorch" />
+                                       </a>
+                                    </div>
+                              </div>
+                           </div>
                         </div>
+
                </section>
                <!--------------Education----------->
                <section class="colorlib-experience" data-section="education">
