--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
                                        <a href="https://skillicons.dev">
                                        <img src="https://skillicons.dev/icons?i=git,github,gitlab,vscode,py,cpp,postgres,latex,pytorch" />
                                        </a>
+                                       <img src="images/skills.svg" alt="skills" height="100">
                                     </div>
                               </div>
                            </div>
