--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
                         <li><a href="#" data-nav-section="education">Education</a></li>
                         <li><a href="#" data-nav-section="skills">Skills</a></li>
                         <li><a href="#" data-nav-section="personal projects">Personal Projects</a></li>
-                        <li><a href="#" data-nav-section="contact">Contact</a></li>
                      </ul>
                   </div>
                </nav>
@@ -204,7 +203,7 @@
                                        <img src="https://skillicons.dev/icons?i=git,github,gitlab,vscode,py,cpp,postgres,latex,pytorch" />
                                        </a>
                                     </div>
-                                    <img src="images/skills.svg" alt="skills" height="600">
+                                    <!-- <img src="images/skills.svg" alt="skills" height="600"> -->
                               </div>
                            </div>
                         </div>
