--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                               <style>
                                  .repo-card {
                                  width: 350px;
-                                 float:left;
+                                 float:center;
                                  }
                               </style>
                               <div class="container">
