--- a/index.html
+++ b/index.html
@@ -300,6 +300,31 @@
                      </div>
                </section>
 
+               <!--------Passions---------->
+               <section class="colorlib-experience" data-section="personal projects">
+                  <div class="colorlib-narrow-content">
+                     <div class="row">
+                        <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
+                           <h2>Personal Projects</h2>
+                           <hr>
+                        </div>
+                     </div>
+                     
+                     <div class="colorlib-narrow-content">
+                        <div class="row">
+                           <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
+                              <div class="container">
+                              <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/652N05EcNH1a4bIlUixQE2?utm_source=generator&theme=0" width="50%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                              <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/2iOJEUCKJaYseov1qA8ot8?utm_source=generator&theme=0" width="50%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                           </div>
+                           </div>
+                        </div>
+                     </div>   
+                  </div>
+               </section>
+
+
+
                <!------------Footer------------->
                <section class="colorlib-footer" data-section="footer">
                   <div class="colorlib-narrow-content">
