--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                   <div class="colorlib-narrow-content">
                      <div class="row">
                         <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-                           <h2>Personal Projects</h2>
+                           <h2>Miscellaneous</h2>
                            <hr>
                         </div>
                      </div>
@@ -314,8 +314,7 @@
                         <div class="row">
                            <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
                               <div class="container">
-                              <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/652N05EcNH1a4bIlUixQE2?utm_source=generator&theme=0" width="50%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-                              <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/2iOJEUCKJaYseov1qA8ot8?utm_source=generator&theme=0" width="50%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                              <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/652N05EcNH1a4bIlUixQE2?utm_source=generator&theme=0" width="360" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe> &ensp; <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/2iOJEUCKJaYseov1qA8ot8?utm_source=generator&theme=0" width="360" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                            </div>
                            </div>
                         </div>
