--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                               <style>
                                  .repo-card {
                                  width: 300px;
-                                 float:center;
+                                 float:left;
                                  }
                               </style>
                               <div class="container">
@@ -314,7 +314,10 @@
                         <div class="row">
                            <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
                               <div class="container">
-                              <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/652N05EcNH1a4bIlUixQE2?utm_source=generator&theme=0" width="360" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe> &ensp; <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/2iOJEUCKJaYseov1qA8ot8?utm_source=generator&theme=0" width="360" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                                 <iframe style="border-radius:6px" src="https://open.spotify.com/embed/track/3nqm3DdVskqbHhmb8S8hMd?utm_source=generator&theme=0" width="50%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                                 <iframe style="border-radius:6px" src="https://open.spotify.com/embed/track/6hqt1z34Oz0OZtSfy62OFD?utm_source=generator&theme=0" width="50%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2u34gsCJ0y9KFBvxxwNRE2?utm_source=generator&theme=0" width="50%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
                            </div>
                            </div>
                         </div>
