--- a/index.html
+++ b/index.html
@@ -314,13 +314,11 @@
                         <div class="row">
                            <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
                               <div class="container">
-                                 <iframe style="border-radius:6px" src="https://open.spotify.com/embed/track/3nqm3DdVskqbHhmb8S8hMd?utm_source=generator&theme=0" width="300" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-                                 <iframe style="border-radius:6px" src="https://open.spotify.com/embed/track/6hqt1z34Oz0OZtSfy62OFD?utm_source=generator&theme=0" width="300" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-                              </div>  <br> 
-                              <div class="container">
-                              <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2u34gsCJ0y9KFBvxxwNRE2?utm_source=generator&theme=0" width="300" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-                                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/7kDUspsoYfLkWnZR7qwHZl?utm_source=generator&theme=0" width="300" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-                              </div>
+                                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/652N05EcNH1a4bIlUixQE2?utm_source=generator&theme=0" width="300" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/2iOJEUCKJaYseov1qA8ot8?utm_source=generator&theme=0" width="300" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                                 <br>
+                                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/0BSVUwV411OWhUlAIK9epW?utm_source=generator&theme=0" width="300" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/57lgFncHBYu5E3igZnuCJK?utm_source=generator&theme=0" width="300" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>                              </div>
                            </div>
                         </div>
                      </div>   
