--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                                     </div> -->
                                     <div class="container">
                                        <div class="skill-box">
-                                          <h1>🤖 Artificial Intelligence</h1>  
+                                          🤖 Artificial Intelligence<
                                           <img src="https://img.shields.io/badge/PyTorch-EE4C2C?style=for-the-badge&logo=pytorch&logoColor=white" height="25">
                                           <img src="https://img.shields.io/badge/TensorFlow-FF6F00?style=for-the-badge&logo=tensorflow&logoColor=white" height="25">
                                           <img src="https://img.shields.io/badge/Keras-FF0000?style=for-the-badge&logo=keras&logoColor=white" height="25">
