--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 
                                     <div class="container">
                                        <div class="skill-box">
-                                          <p size="5"> <b>🤖 Artificial Intelligence </b></p> 
+                                          <p size="8"> <b>🤖 Artificial Intelligence </b></p> 
                                           <img src="https://img.shields.io/badge/PyTorch-EE4C2C?style=for-the-badge&logo=pytorch&logoColor=white" height="25">
                                           <img src="https://img.shields.io/badge/TensorFlow-FF6F00?style=for-the-badge&logo=tensorflow&logoColor=white" height="25"> <br>
                                           <img src="https://img.shields.io/badge/Keras-FF0000?style=for-the-badge&logo=keras&logoColor=white" height="25">
@@ -209,17 +209,17 @@
                                        </div>
                                        &nbsp;
                                        <div class="skill-box">
-                                          <p size="5"> <b>☁ Cloud</b></p> 
+                                          <p size="8"> <b>☁ Cloud</b></p> 
                                           <img src="https://img.shields.io/badge/microsoft%20azure-0089D6?style=for-the-badge&logo=microsoft-azure&logoColor=white" height="25">
                                        </div>
                                        <div class="skill-box">
-                                          <p size="5"> <b>⚡ Database</b></p> 
+                                          <p size="8"> <b>⚡ Database</b></p> 
                                           <img src="https://img.shields.io/badge/PostgreSQL-316192?style=for-the-badge&logo=postgresql&logoColor=white" height="25">
                                        </div>
                                        
                                        <br>
                                        <div class="skill-box">
-                                          <p size="5"> <b>👨‍💻 Programming</b></p> 
+                                          <p size="8"> <b>👨‍💻 Programming</b></p> 
                                           <img src="https://img.shields.io/badge/C++-00599C?style=for-the-badge&logo=c%2B%2B&logoColor=white" height="25">
                                           <img src="https://img.shields.io/badge/Python-3776AB?style=for-the-badge&logo=python&logoColor=white" height="25"> <br>
                                           <img src="https://img.shields.io/badge/Numpy-777BB4?style=for-the-badge&logo=numpy&logoColor=white" height="25"> 
@@ -230,7 +230,7 @@
                                        </div>
                                        &nbsp;
                                        <div class="skill-box">
-                                          <p size="5"> <b>💻 Dev</b></p> 
+                                          <p size="8"> 💻 Dev</p> 
                                           <img src="https://img.shields.io/badge/Visual%20Studio%20Code-0078D4?style=for-the-badge&logo=visual-studio-code&logoColor=white" height="25">
                                           <img src="https://img.shields.io/badge/GIT-E44C30?style=for-the-badge&logo=git&logoColor=white" height="25">
                                           <img src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white" height="25">
