--- a/index.html
+++ b/index.html
@@ -344,9 +344,10 @@
                                  <br>
                                  <iframe style="border-radius:2px" src="https://open.spotify.com/embed/album/0BSVUwV411OWhUlAIK9epW?utm_source=generator&theme=0" width="300" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                                  <iframe style="border-radius:2px" src="https://open.spotify.com/embed/album/57lgFncHBYu5E3igZnuCJK?utm_source=generator&theme=0" width="300" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>     
+                                 <br>
+                                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/3nHpBmW5wJXGeC3ojBkpey?utm_source=generator&theme=0" width="300" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/7sXufweikTP0DcDSBGwpoD?utm_source=generator&theme=0" width="300" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                               </div>
-
-                              <a href="https://www.flaticon.com/free-icons/car" title="car icons">by Smashicons </a>
                            </div>
                         </div>
                      </div>   
